Created more structure for my resume

--- a/Resume/.gitignore
+++ b/Resume/.gitignore
@@ -7,10 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
 dist
 dist-ssr
+
+# Environment and local files
 *.local
+.env
+.env.*.local
+
+# React Router
+**/history/
+.react-router-dom-cache/
 
 # Editor directories and files
 .vscode/*
