added scripts for deploying website

--- a/Resume/package.json
+++ b/Resume/package.json
@@ -1,9 +1,13 @@
 {
+  "homepage": "https://looksorn789.github.io/Resume/",
   "name": "resume",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
