--- a/Resume/package.json
+++ b/Resume/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://<your-username>.github.io/<your-repo-name>",
+  "homepage": "https://looksorn789.github.io/Resume/",
   "name": "resume",
   "private": true,
   "version": "0.0.0",
