change my entire name to portfolio

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://looksorn789.github.io/Resume/",
+  "homepage": "https://looksorn789.github.io/Portfolio/",
   "name": "resume",
   "private": true,
   "version": "0.0.0",
